2007-03-29  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-journal.c:
	* camel/camel-exchange-folder.c:
	* camel/camel-stub-marshal.c:
	* camel/camel-exchange-store.c:
	* camel/camel-stub.c:
	* mail/mail-utils.c:
	* mail/mail-utils.h:
	* mail/mail-stub-exchange.c:
	* mail/mail-stub.c:
	* addressbook/e-book-backend-exchange.c:
	* addressbook/e-book-backend-gal.c:
	* calendar/e-cal-backend-exchange.c:
	* calendar/e-cal-backend-exchange-tasks.c:
	* calendar/e-cal-backend-exchange-calendar.c:
	Fix all compiler warnings (#405916).

2007-03-27  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-gal.c:
	* calendar/e-cal-backend-exchange-calendar.c:
	* calendar/e-cal-backend-exchange.c:
	* camel/camel-exchange-store.c:
	* mail/mail-stub-exchange:
	* storage/exchange-component.c:
	* storage/exchange-config-listener.c:
	Don't mix declarations and code (#405495).

2007-03-26  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Fix the bug-report address in AC_INIT (#363283).
	Patch from Gilles Dartiguelongue.

2007-03-26  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-summary.c:
	Fix a #include typo (#414216).  Patch from Loïc Minier.

2007-03-12  Harish Krishnaswamy <kharish@novell.com>

	* configure.in: Evolution-Exchange 2.10.0 release updates.

2007-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes #384303 - Patch by Srinivasa Ragavan
	* configure.in:
	* addressbook/e-book-backend-gal.c: Disable GAL caching if
	LDAP_CONTROL_PAGEDRESULTS is undefined.
	
2007-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder_info): Mask
	CAMEL_FOLDER_INFO_FAST with CAMEL_FOLDER_INFO_SUBSCRIBED in order
	to fetch the correct folder list, which changed after the public
	folder optimization fix.
	
2007-02-28  Kjartan Maraas  <kmaraas@gnome.org>

	* addressbook/e-book-backend-gal.c: (parse_page_control):
	Don't mark debug messages for translation. The strings are