@@ -1,3 +1,9 @@
+2007-04-05  Matthew Barnes  <mbarnes@redhat.com>
+
+	* storage/exchange-config-listener.c (class_init):
+	* storage/exchange-component.c (exchange_component_class_init):
+	Use GLib marshallers wherever possible.
+
 2007-03-29  Matthew Barnes  <mbarnes@redhat.com>
 
 	* camel/camel-exchange-journal.c:
